# hs16

./: .gitignore  C++17.status  CMakeLists.txt  ERRATA
atomics/: fetch_add.cpp
atomics/scorep-20160607_0049_149153106486277/: profile.cubex  traces.def  traces.otf2
auto/: WHATSNEW  auto.cpp  test_func.cpp
euler/problem1/: multiples35.c  multiples35_03.cpp  multiples35_11.cpp  multiples35_14.cpp  multiples35_14.s
euler/problem22/: problem22_cxx03.cpp  problem22_cxx14.cpp
fileio/: WHATSNEW  simple_fileio.cpp
fileio/scorep-simple_fileio/: profile.cubex  traces.def  traces.otf2
folding_expressions/: WHATSNEW  sum.cpp
folding_expressions/scorep-sum_trace/: profile.cubex  traces.def  traces.otf2
paper/: Makefile  appendix.tex  bibliography.bib  blowfish.tex  conclusion.tex  cpp17.tex  introduction.tex  literature.tex  main.tex  queue.tex  scorep.tex  vec_add.tex  zih-template.cls  zihpub.cls
paper/_minted-.main.tex/: default-pyg-prefix.pygstyle  default.pygstyle
paper_tests/: binary_fstream.cpp  c_io.cpp  future_default.cpp  future_deferred.cpp  future_explicit.cpp  lambda.cpp  pthread_cv.cpp  pthread_detach.cpp  pthread_join.cpp  pthread_stdmutex.cpp  text_fstream.cpp  thread_detach.cpp  thread_join.cpp
paper_tests/binary_fstream_trace/: profile.cubex  traces.def  traces.otf2
paper_tests/c_io_trace/: profile.cubex  scorep.cfg  traces.def  traces.otf2
paper_tests/future_default_trace/: profile.cubex  traces.def  traces.otf2
paper_tests/lambda_trace/: profile.cubex  traces.def  traces.otf2
presentation/: presentation.odp
pthread_mutex_test/: main.cpp  notes
threads/: WHATSNEW  bug-notes-for-ronny-t.txt  simple_thread.cpp
vector_mul/: vector_mul.cpp
(+82 files in other folders)
